test/fail/IncorrectDoWhile.java
class DoWhile{
    public static void main(String[] a){
        System.out.println("Test incorrect do while");
    }
}


// This incorrect do while statement
class Test{

    int foo;

    int Loop(){
        int aux01 ;
        do 
			aux01 = 10;
		}while(true);
		
        return 0 ;
    }

}
